--- a/asp_mvc_2/Web.config
+++ b/asp_mvc_2/Web.config
@@ -17,8 +17,8 @@
   <system.web>
       <authentication mode="Forms">
         <forms loginUrl="~/Account/Login" defaultUrl="~/Home/Welcome">
-        </forms>
-      </authentication>
+      </forms>
+    </authentication>
    
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
@@ -67,9 +67,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <connectionStrings>
-    <add name="DemoDBEntities" connectionString="metadata=res://*/Models.DB.DemoModel.csdl|res://*/Models.DB.DemoModel.ssdl|res://*/Models.DB.DemoModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NIAR\SQLEXPRESS;initial catalog=DemoDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="DemoDBEntities" connectionString="metadata=res://*/Models.DB.DemoModel.csdl|res://*/Models.DB.DemoModel.ssdl|res://*/Models.DB.DemoModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NIAR\SQLEXPRESS;initial catalog=DemoDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="DemoDBEntities1" connectionString="metadata=res://*/Models.DB.DemoModel.csdl|res://*/Models.DB.DemoModel.ssdl|res://*/Models.DB.DemoModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NIAR\NIAR;initial catalog=DemoDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
